--- a/PieChart.css
+++ b/PieChart.css
@@ -23,26 +23,21 @@ body {
 .charts {
     display: flex;
     justify-content: center;
-    gap: 50px;
-    margin-top: 30px;
+    gap: 150px;
+    margin-top: 26px;
     flex-wrap: wrap;
 }
 
 .chart-container {
-    width: 350px;
-    height: 350px;
-}
-
-canvas {
-    width: 100% !important;
-    height: auto !important;
+    width: 300px;
+    height: 300px;
 }
 
 .common-legend {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    margin-top: 80px;
+    margin-top: 170px;
     gap: 10px;
 }
 
@@ -62,4 +57,11 @@ canvas {
 
 .chart-container h2 {
     margin-bottom: 10;
+}
+
+.tooltip {
+    font-family: Arial, sans-serif;
+    font-size: 14px;
+    pointer-events: none;
+    z-index: 10;
 }
