--- a/Styles/PieChart.css
+++ b/Styles/PieChart.css
@@ -1,6 +1,12 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+	margin: 0;
+    padding: 0;
+    background-color: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 .year-buttons {
@@ -64,4 +70,11 @@ body {
     font-size: 14px;
     pointer-events: none;
     z-index: 10;
+}
+footer {
+    margin-top: auto;
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
 }
