--- a/Styles/story.css
+++ b/Styles/story.css
@@ -6,10 +6,10 @@ body {
 }
 
 header {
-    background-color: #4CAF50;
+    background-color: #333;
     color: white;
     text-align: center;
-    padding: 1rem 0;
+    padding: 10px 0;
 }
 
 h1 {
@@ -57,14 +57,13 @@ ul li a:hover {
 }
 
 footer {
-    text-align: center;
-    padding: 1rem 0;
-    background-color: #4CAF50;
+    margin-top: auto;
+    background-color: #333;
     color: white;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    text-align: center;
+    padding: 10px 0;
 }
+
 
 img {
     max-width: 100%;
