--- a/Styles/index.css
+++ b/Styles/index.css
@@ -25,7 +25,7 @@ h1, h2 {
 }
 
 button {
-    background-color: #4CAF50;
+    background-color: #00008b;
     border: none;
     color: white;
     padding: 10px 20px;
