--- a/Styles/PieChart.css
+++ b/Styles/PieChart.css
@@ -15,6 +15,7 @@ body {
 
 .year-buttons button {
     background-color: #00008b;
+	color: white;
     border: none;
     padding: 10px 20px;
     margin: 0 10px;
